fix spacing issues

--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -60,3 +60,7 @@
 a {
   color: rgb(var(--v-theme-primary));
 }
+
+.fill-height {
+  min-height: 100vh;
+}
